--- a/paper/Hauptprojekt/HauptProjekt.tex
+++ b/paper/Hauptprojekt/HauptProjekt.tex
@@ -56,12 +56,12 @@ numbers=noenddot    % Kein Punkt hinter Kapitelnummern
     % Chapters
     \clearpage
     \pagenumbering{arabic}
-    \input{chapters/first_chapter}
-    \input{chapters/second_chapter}
-    \input{chapters/third_chapter}
-    \input{chapters/fourth_chapter}
-    \input{chapters/fifth_chapter}
-    %\input{chapters/sixth_chapter}
+    \input{chapters/chapter_1}
+    \input{chapters/chapter_2}
+    \input{chapters/chapter_3}
+    \input{chapters/chapter_4}
+    \input{chapters/chapter_5}
+    \input{chapters/chapter_6}
     % Add additional chapters here
 
     %\bibliographystyle{plain}
