Added lp measurement images

--- a/paper/Hauptprojekt/HauptProjekt.tex
+++ b/paper/Hauptprojekt/HauptProjekt.tex
@@ -51,7 +51,7 @@ numbers=noenddot    % Kein Punkt hinter Kapitelnummern
     %\lstlistoflistings  % requires package listings, needs to uncommenting of usepackage
 
     % path to the chapters folder is set to find the images used there
-    \graphicspath{ {./chapters/img/} }
+    \graphicspath{ {./img/} }
 
     % Chapters
     \clearpage
