--- a/paper/Hauptprojekt/HauptProjekt.tex
+++ b/paper/Hauptprojekt/HauptProjekt.tex
@@ -57,11 +57,11 @@ numbers=noenddot    % Kein Punkt hinter Kapitelnummern
     \clearpage
     \pagenumbering{arabic}
     \input{chapters/chapter_1}
-    \input{chapters/chapter_2}
+%    \input{chapters/chapter_2}
     \input{chapters/chapter_3}
     \input{chapters/chapter_4}
     \input{chapters/chapter_5}
-    \input{chapters/chapter_6}
+%    \input{chapters/chapter_6}
     % Add additional chapters here
 
     %\bibliographystyle{plain}
