--- a/paper/style/convenience.sty
+++ b/paper/style/convenience.sty
@@ -8,6 +8,7 @@
 % @param factor of the width (in respect to textwidth)
 % @param name of the file (without format extenstion), used in label as well
 % @param caption text
+% @param list of figures text
 \newcommand\includenamedimage[4][]{
     \begin{figure}
       \centering
