includ pgf-pie for tikz charts

--- a/paper/Hauptprojekt/HauptProjekt.tex
+++ b/paper/Hauptprojekt/HauptProjekt.tex
@@ -13,7 +13,7 @@ numbers=noenddot    % Kein Punkt hinter Kapitelnummern
 
 
 %Custom
-%\usepackage{../style/pgf-pie} % for pie charts
+\usepackage{../style/pgf-pie} % for pie charts
 
 
 \begin{document}
