--- a/paper/Hauptprojekt/literature.bib
+++ b/paper/Hauptprojekt/literature.bib
@@ -17,6 +17,14 @@
 	volume = {1},
 	year = {2001}
 }
+@misc{AppleInc.2019,
+	author = {{Apple Inc.}},
+	mendeley-groups = {Hauptprojekt},
+	title = {{iPhone XR - Apple}},
+	url = {https://www.apple.com/lae/iphone-xr/},
+	urldate = {15.7.2019},
+	year = {2019}
+}
 @article{Adnan2013,
 	abstract = {Advanced technology offers us various alternatives for collecting traffic data. However, different devices often result in different accuracy to the true speed of the drivers. Lack of knowledge of accuracy between different devices is often cited as a common problem for both transportation researcher and practitioner. This paper discusses the most accurate traffic data measurement device when compared to the true driving speed of the driver using the V-BOX GPS validated with the dash box of the test vehicle. The paper illustrates and discusses the significant value R{\textless}sup{\textgreater}2{\textless}/sup{\textgreater} of the traffic data using scatter plot, root mean squared error (RMSE), mean absolute error (MAE) and mean absolute percentage error (MAPE). The paper covers two classes of advanced traffic data collection devices which are intrusive (automated traffic classifier) and off road portable speed measurement devices (laser gun, radar gun and manual count). Results showed that automated traffic classifier have the smaller discrepancies or deviations followed by laser gun, manual count and radar gun when comparing to the global positioning system (GPS). It is extremely important to notify which devices have the most accurate data collection as any study can only be as accurate as the data on which it is based.},
 	author = {Adnan, Muhammad Akram and Sulaiman, Norliana and Zainuddin, Nor Izzah and Besar, Tuan Badrul Hisyam Tuan},
