--- a/paper/Hauptprojekt/configuration/configuration.tex
+++ b/paper/Hauptprojekt/configuration/configuration.tex
@@ -10,22 +10,24 @@
 
 % text field
 %-> replace title with your thesis title
-\thesisTitleEN{Building a Prototype for Real-Time License Plate Extraction using Deep Learning}
-\thesisTitle{Prototyp zur Kennzeichenerkennung in Echtzeit mit Hilfe von Deep Learning}
+\thesisTitleEN{Speed estimation of passing vehicles using Deep Learning}
+\thesisTitle{Geschwindigkeitsschätzung von Fahrzeugen mit Hilfe von Deep Learning}
 
 % text field
 %-> replace the key words with your own key words
-\keywordsDE{Convolutional neural network, YOLO, Automatische Kennzeichenerkennung}
-\keywordsEN{Convolutional neural network, YOLO, ALPR}
+\keywordsDE{Convolutional neural network, YOLO, Automatische Kennzeichenerkennung, Geschwindigkeitsmessung}
+\keywordsEN{Convolutional neural network, YOLO, ALPR, Speed measurement}
 
 % text field
 %-> replace the text with a description of the thesis
-\abstractDE{Diese Arbeit dokumentiert den Bau eines Prototypen, der es ermöglicht Autokennzeichen in einem Video zu erkennen.
-Dabei wird ein Faltungsnetzwerk namens YOLO benutzt um die Fahrzeuge zu finden und heuristische Methoden mittels OpenCV, um die Kennzeichen zu extrahieren.}
+\abstractDE{
+Diese Arbeit dokumentiert den Bau eines Prototypen, der es ermöglicht die Geschwindigkeit von Fahrzeugen in Videos zu bestimmen.
+Dabei wird ein Faltungsnetzwerk namens YOLO benutzt, um Kennzeichen zu finden anhand deren bekannter Dimensionen über mehrere Bilder hinweg die Geschwindigkeit des Fahrzeugs errechnet werden kann.
+}
 
 \abstractEN{
-In this work the problem of building a prototype system to detect license plates in a video feed is tackled.
-Inspired by the versatility of deep neural networks the system uses a CNN called YOLO to detect vehicles and heuristic methods in OpenCV to extract the license plates.
+In this work the problem of building a prototype system to estimate the speed of vehicles in a video feed is tackled.
+Inspired by the versatility of deep neural networks the system uses a CNN called YOLO to detect license plates and uses their known dimensions to calculate the speed of the vehicle.
 }
 
 % text field
@@ -34,7 +36,7 @@ Inspired by the versatility of deep neural networks the system uses a CNN called
 
 % text field
 %-> enter the submission date
-\submissionDate{01. November 2018}
+\submissionDate{\today}
 
 % switch - uncomment only one
 %-> uncomment NDA or public
