--- a/paper/Hauptprojekt/literature.bib
+++ b/paper/Hauptprojekt/literature.bib
@@ -21,8 +21,8 @@
 	author = {{Apple Inc.}},
 	mendeley-groups = {Hauptprojekt},
 	title = {{iPhone XR - Apple}},
-	url = {https://www.apple.com/lae/iphone-xr/},
-	urldate = {15.7.2019},
+	url = {https://www.apple.com/lae/iphone-xr/specs/},
+	urldate = {2019-07-15},
 	year = {2019}
 }
 @article{Adnan2013,
