--- a/paper/Hauptprojekt/HauptProjekt.tex
+++ b/paper/Hauptprojekt/HauptProjekt.tex
@@ -21,7 +21,7 @@ numbers=noenddot    % Kein Punkt hinter Kapitelnummern
 \begin{document}
     \input{configuration/configuration}    % load all settings
 
-    \hyphenation{Ba-che-lor-the-sis Mas-ter-the-sis}
+    \hyphenation{Ba-che-lor-the-sis Mas-ter-the-sis Falt-ungs-netz-werk}
 
     % Cover page here, no page number
     \input{../style/coverpage}
