--- a/paper/Hauptprojekt/configuration/configuration.tex
+++ b/paper/Hauptprojekt/configuration/configuration.tex
@@ -22,7 +22,7 @@
 %-> replace the text with a description of the thesis
 \abstractDE{
 Diese Arbeit dokumentiert den Bau eines Prototypen, der es ermöglicht die Geschwindigkeit von Fahrzeugen in Videos zu bestimmen.
-Dabei wird ein Faltungsnetzwerk namens YOLO benutzt, um Kennzeichen zu finden anhand deren bekannter Dimensionen über mehrere Bilder hinweg die Geschwindigkeit des Fahrzeugs errechnet werden kann.
+Dabei wird ein Faltungsnetzwerk namens YOLO benutzt, um Kennzeichen zu finden, anhand deren bekannter Dimensionen über mehrere Bilder hinweg die Geschwindigkeit des Fahrzeugs errechnet werden kann.
 }
 
 \abstractEN{
